<resources>
    <string name="app_name">运服工行端</string>
    <string name="empty"></string>
    <string name="user_me">我的</string>
    <string name="feedback">意见反馈</string>
    <string name="modifypassword">修改登录密码</string>
    <string name="user_profile">个人名片</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入注册手机号</string>
    <string name="login_hint_password">请输入登录密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="stay_confirmed">待确认</string>
    <string name="stay_maintenance">待维修</string>
    <string name="stay_evaluation">待评价</string>
    <string name="history_workorder">历史工单</string>
    <string name="confirm_complete">确认完成</string>
    <string name="readed">已读</string>
    <string name="add">添加</string>
    <string name="add_new_order">下单</string>
    <string name="add_express_detail">可填单后再录入快递单号</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="edit">编辑</string>
    <string name="sign_in">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="message">消息</string>
    <string name="sign_in_tuning">登录</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">正在检查版本</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="msg_notice">消息提醒</string>
    <string name="black_list">黑名单</string>
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="clear_empty">清空</string>
    <string name="iknow">知道了</string>
    <string name="search">搜索</string>
    <string name="input_panel_photo">图 片</string>
    <string name="input_panel_video">视 频</string>
    <string name="input_panel_location">位 置</string>
    <string name="input_panel_workorder">工 单</string>
    <string name="input_panel_take">拍 摄</string>
    <string name="im_choose_pic">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="repeat_download_message">重新下载?</string>
    <string name="repeat_send_has_blank">重 发</string>
    <string name="repeat_send_message">重发消息?</string>
    <string name="copy_has_blank">复 制</string>
    <string name="delete_has_blank">删 除</string>
    <string name="voice_to_text">转文字</string>
    <string name="forward_to_person">转发到个人</string>
    <string name="forward_to_team">转发到群组</string>
    <string name="save">保存</string>
    <string name="main_msg_list_delete_chatting">删除该聊天</string>
    <string name="main_msg_list_sticky_on_top">置顶该聊天</string>
    <string name="main_msg_list_clear_sticky_on_top">取消置顶</string>
    <string name="save_to_device">保存到手机</string>
    <string name="picture_save_fail">图片保存失败</string>
    <string name="picture_save_to">图片已保存到手机</string>
    <string name="search_join_team">搜索加入群组</string>
    <string name="file_transfer_state_downloaded">已下载</string>
    <string name="file_transfer_state_undownload">未下载</string>
    <string name="trans_voice_failed">语音转化失败</string>
    <string name="team_invalid_tip">您已退出该群</string>
    <string name="normal_team_invalid_tip">您已退出该讨论组</string>
    <string name="team_send_message_not_allow">您已不在该群，不能发送消息</string>
    <string name="send">发送</string>
    <string name="unsupport_title">无法显示该内容</string>
    <string name="unsupport_desc">客户端版本不支持该内容</string>
    <string name="record_audio">按住 说话</string>
    <string name="record_audio_end">松开  结束</string>
    <string name="sdcard_not_exist_error">请插入SD卡</string>
    <string name="recording_error">录音失败，请重试</string>
    <string name="recording_init_failed">初始化录音失败</string>
    <string name="recording_cancel">手指上滑 取消发送</string>
    <string name="timer_default">00:00</string>
    <string name="recording_cancel_tip">松开手指，取消发送</string>
    <string name="recording_max_time">录音达到最大时间，是否发送？</string>
    <string name="gallery_invalid">你的手机没有图库程序</string>
    <string name="sdcard_not_enough_head_error">SD卡被拔出或存储空间不足，无法保存头像</string>
    <string name="sdcard_not_enough_error">存储空间不足，无法保存此次多媒体消息</string>
    <string name="download_video">正在下载视频</string>
    <string name="download_video_fail">视频下载失败,请重试</string>
    <string name="look_video_fail">无法播放该视频</string>
    <string name="look_video_fail_try_again">暂时无法播放视频，请重试</string>
    <string name="video_play">视频播放</string>
    <string name="video_record">视频录制</string>
    <string name="video_record_symbol">REC</string>
    <string name="video_record_begin">开始录制</string>
    <string name="connect_vedio_device_fail">请到设置到开启摄像头权限</string>
    <string name="capture_video_size_in_kb">视频文件大小为: %1$dKB,</string>
    <string name="capture_video_size_in_mb">视频文件大小为: %1$.2fMB,</string>
    <string name="is_send_video">是否发送该视频？</string>
    <string name="start_camera_to_record_failed">启动摄像头录制视频失败</string>
    <string name="stop_fail_maybe_stopped">停止失败，可能已经停止</string>
    <string name="video_exception">视频文件异常</string>
    <string name="im_choose_video_file_size_too_large">视频文件过大，系统限制为20MB</string>
    <string name="im_choose_video">请选择3GP MP4格式的视频文件</string>
    <string name="video_record_short">录制视频太短</string>
    <string name="download_progress_description">%1$s（%2$s/%3$s）</string>
    <string name="contact_selector">联系人选择器</string>
    <string name="team_need_authentication">需要身份验证</string>
    <string name="team_allow_anyone_join">允许任何人加入</string>
    <string name="team_not_allow_anyone_join">不允许任何人申请加入</string>
    <string name="team_admin_invite">管理员邀请</string>
    <string name="team_everyone_invite">所有人邀请</string>
    <string name="team_admin_update">管理员修改</string>
    <string name="team_everyone_update">所有人修改</string>
    <string name="team_invitee_need_authen">需要验证</string>
    <string name="team_invitee_not_need_authen">不需要验证</string>
    <string name="team_nickname">群昵称</string>
    <string name="team_nickname_none">未填写</string>
    <string name="team_identity">身份</string>
    <string name="remove_member">移出本群</string>
    <string name="team_member_info">成员信息</string>
    <string name="team_admin">管理员</string>
    <string name="team_creator">群主</string>
    <string name="team_member">群成员</string>
    <string name="update_success">保存成功</string>
    <string name="update_failed">保存失败, code:%d</string>
    <string name="no_permission">没有权限</string>
    <string name="set_team_admin">设为管理员</string>
    <string name="cancel_team_admin">取消管理员</string>
    <string name="team_member_remove_confirm">确定要将其移出群组么?</string>
    <string name="team_annourcement">群公告</string>
    <string name="invite_member">邀请成员</string>
    <string name="team_name">群名称</string>
    <string name="team_introduce">群介绍</string>
    <string name="team_extension">扩展示例</string>
    <string name="click_set">点击设置</string>
    <string name="create_advanced_team">创建高级群</string>
    <string name="reach_team_member_capacity">成员数量不能超过%1$d</string>
    <string name="team_authentication">身份验证</string>
    <string name="team_invite">邀请他人权限</string>
    <string name="team_info_update">群资料修改权限</string>
    <string name="team_invitee_authentication">被邀请人身份验证</string>
    <string name="create_team">创建群</string>
    <string name="over_team_member_capacity">邀请失败，成员人数上限为%1$d人</string>
    <string name="over_team_capacity">创建失败，创建群数量达到限制</string>
    <string name="create_team_failed">创建失败</string>
    <string name="create_team_success">创建成功</string>
    <string name="team_announce_title">标题</string>
    <string name="team_announce_content">公告内容</string>
    <string name="team_announce_notice">请输入群公告标题</string>
    <string name="my_team_card">我的群名片</string>
    <string name="team_introduce_hint">点击填写群介绍</string>
    <string name="team_extension_hint">点击修改扩展内容</string>
    <string name="team_announce_hint">点击填写群公告</string>
    <string name="team_notification_config">消息提醒</string>
    <string name="team_transfer_without_member">没有可转移的群成员</string>
    <string name="team_invite_members_success">群成员邀请已发出</string>
    <string name="team_invite_members_failed">群成员邀请失败</string>
    <string name="team_transfer_success">群转移成功</string>
    <string name="team_transfer_failed">群转移失败</string>
    <string name="quit_team_success">您已退群</string>
    <string name="quit_team_failed">退群失败</string>
    <string name="supplier">供应商</string>
    <string name="equipment">设备</string>
    <string name="model">型号</string>
    <string name="nummber">数量</string>
    <string name="note">备注</string>
</resources>